Make crate rand a dev-dependency

--- a/adler32/Cargo.toml
+++ b/adler32/Cargo.toml
@@ -3,5 +3,5 @@ name = "adler32"
 version = "0.1.0"
 authors = ["Remi Rampin <remirampin@gmail.com>"]
 
-[dependencies]
+[dev-dependencies]
 rand = "*"
