Add sha1 as a dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,8 @@ name = "rs-sync"
 version = "0.1.0"
 authors = ["Remi Rampin <remirampin@gmail.com>"]
 
+[dependencies]
+sha1 = "*"
+
 [dependencies.adler32]
 path = "adler32"
