Add log, env_logger as dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Remi Rampin <remirampin@gmail.com>"]
 
 [dependencies]
+env_logger = "0.3"
+log = "0.3"
 sha1 = "*"
 
 [dependencies.adler32]
