--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ sudo: false
 script:
   - cargo build --verbose
   - cargo test --verbose
+  - ./test.sh
   - cargo doc
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
