--- a/adler32/Cargo.toml
+++ b/adler32/Cargo.toml
@@ -2,6 +2,11 @@
 name = "adler32"
 version = "0.1.0"
 authors = ["Remi Rampin <remirampin@gmail.com>"]
+description = "Minimal Adler32 implementation for Rust."
+documentation = "http://remram44.github.io/rs-sync/adler32/index.html"
+repository = "https://github.com/remram44/rs-sync/tree/master/adler32"
+keywords = ["adler32", "hash", "rolling"]
+license = "BSD-3-Clause"
 
 [dev-dependencies]
 rand = "*"
