Update Travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ after_success: |
   [ $TRAVIS_RUST_VERSION = nightly ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
   echo '<meta http-equiv=refresh content=0;url=rs_sync/index.html>' > target/doc/index.html &&
-  pip install ghp-import --user $USER &&
+  pip install --user ghp-import &&
   $HOME/.local/bin/ghp-import -n target/doc &&
   git push -qf https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
