--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ rust:
   - beta
   - nightly
 sudo: false
-script:
-  - cargo build --verbose
-  - cargo test --verbose
-  - ./test.sh
-  - cargo doc
+script: |
+  cargo build --verbose && \
+  cargo test --verbose && \
+  ./test.sh && \
+  cargo doc
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
   [ $TRAVIS_RUST_VERSION = nightly ] &&
