--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Remi Rampin <remirampin@gmail.com>"]
 
 [dependencies]
 adler32 = "1.0"
-byteorder = "1.2"
-docopt = "0.6"
-env_logger = "0.4"
+byteorder = "1.3"
+docopt = "1.1"
+env_logger = "0.6"
 log = "0.4"
-rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
-sha1 = "0.4"
+serde = "1.0"
+sha1 = "0.6"
