--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ name = "rssync"
 path = "src/main.rs"
 
 [dependencies]
+cdchunking = "0.2"
 chrono = "0.4"
 clap = "2"
 log = "0.4"
 env_logger = "0.6"
 rusqlite = "0.16"
+sha1 = "0.6"
