--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rssync2"
-version = "0.1.0"
+name = "rssync"
+version = "0.2.0"
 authors = ["Remi Rampin <r@remirampin.com>"]
 license = "BSD-3-Clause"
 
