--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rssync"
+name = "rrsync"
 version = "0.2.0"
 authors = ["Remi Rampin <r@remirampin.com>"]
 license = "BSD-3-Clause"
 
 [[bin]]
-name = "rssync"
+name = "rrsync"
 path = "src/main.rs"
 
 [dependencies]
