--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ cdchunking = "0.2"
 chrono = "0.4"
 clap = "2"
 log = "0.4"
-env_logger = { version = "0.6", default-features = false, features = ["termcolor", "atty", "humantime"] }
+env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
 rusqlite = { version = "0.16", features = ["chrono"] }
 sha1 = "0.6"
 
 [dev-dependencies]
-tempfile = "~3.0"
+tempfile = "3"
