--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "rrsync"
-version = "0.2.0"
+version = "0.1.0"
 authors = ["Remi Rampin <r@remirampin.com>"]
+description = "rsync/rdiff/zsync clone"
+repository = "https://github.com/remram44/rrsync"
 license = "BSD-3-Clause"
 
 [[bin]]
