--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 cdchunking = "0.2"
 chrono = "0.4"
 clap = "2"
+copy_in_place = "0.2"
 log = "0.4"
 env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
 rusqlite = { version = "0.16", features = ["chrono"] }
