--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 cdchunking = "0.2"
 chrono = "0.4"
 clap = "2"
+futures = "0.3"
 env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
 log = "0.4"
 rusqlite = { version = "0.16", features = ["chrono"] }
