--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        rust-version: [1.33.0, stable, nightly]
+        rust-version: [1.46.0, stable, nightly]
         include:
         - os: macos-latest
-          rust-version: 1.33.0
+          rust-version: stable
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
