--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ env_logger = { version = "0.7", default-features = false, features = ["termcolor
 log = "0.4"
 rusqlite = { version = "0.16", features = ["chrono"] }
 sha1 = "0.6"
+tokio = { version = "1.11", features = ["rt"] }
 
 [dev-dependencies]
 tempfile = "3"
