--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ clap = "2"
 futures = "0.3"
 env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
 log = "0.4"
+nix = "0.23"
 rusqlite = { version = "0.16", features = ["chrono"] }
 sha1 = "0.6"
-tokio = { version = "1.11", features = ["io-std", "io-util", "process", "rt"] }
+tokio = { version = "1.11", features = ["fs", "io-std", "io-util", "process", "rt"] }
 
 [dev-dependencies]
 tempfile = "3"
